...
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            >

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CountryRecycler"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingRight="10dp"

            >

        </androidx.recyclerview.widget.RecyclerView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/TourRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
...
